--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "cookie-session": "^1.4.0",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.1",
     "immer": "^9.0.1",
+    "morgan": "^1.10.0",
+    "node-cache": "^5.1.2",
+    "passport": "^0.4.1",
+    "passport-oauth": "^1.0.0",
+    "passport-oauth2-refresh": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flow-renderer": "^9.4.4",
@@ -19,6 +27,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "standard": "^16.0.3",
+    "util": "^0.12.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
