--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "cookie-session": "^1.4.0",
+    "d3-force": "^3.0.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.1",
     "immer": "^9.0.1",
@@ -27,7 +28,9 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.1.5",
     "standard": "^16.0.3",
+    "underscore": "^1.13.2",
     "util": "^0.12.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
